# linear_algebra

./: .gitignore  CMakeLists.txt  DenseMatrix.cpp  DenseMatrix.hpp  DenseVector.cpp  DenseVector.hpp  LinearSolverInterface.cpp  LinearSolverInterface.hpp  LowerTriangularMatrix.cpp  LowerTriangularMatrix.hpp  Matrix.hpp  README.md  SymmetricMatrix.cpp  SymmetricMatrix.hpp  TridiagonalMatrix.cpp  TridiagonalMatrix.hpp  UpperTriangularMatrix.cpp  UpperTriangularMatrix.hpp  compare_mat_performance.m  main.cpp  problem1.m
